feat: split into colab, workbench, local

--- a/examples/pipelines_colab.ipynb
+++ b/examples/pipelines_colab.ipynb
@@ -123,7 +123,7 @@
     "id": "aed92deeb4a0"
    },
    "source": [
-    "### Costs \n",
+    "### Costs\n",
     "\n",
     "\n",
     "This tutorial uses billable components of Google Cloud:\n",
@@ -147,6 +147,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "YXI8WcMpuyXI",
     "tags": []
    },
    "source": [
@@ -156,13 +157,13 @@
     "- [Google Cloud SDK (gcloud)](https://cloud.google.com/sdk/docs/quickstart)\n",
     "- Make\n",
     "- [Poetry](https://python-poetry.org)\n",
-    "- [Terraform](https://www.terraform.io) (To install Terraform on your local machine we recommend using [tfswitch](https://tfswitch.warrensbox.com/) to automatically choose and download an appropriate version.)\n",
-    "- [pyenv](https://github.com/pyenv/pyenv)"
+    "- [Terraform](https://www.terraform.io) (To install Terraform on your local machine we recommend using [tfswitch](https://tfswitch.warrensbox.com/) to automatically choose and download an appropriate version.)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "ujfOJ2gHuyXJ",
     "tags": []
    },
    "source": [
@@ -173,18 +174,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "J5YwqQbDuyXJ",
+    "outputId": "9b703837-a177-4956-8c77-2985dea88601",
     "tags": []
    },
    "outputs": [],
    "source": [
     "# Clone a Git repository\n",
-    "!git clone -b develop https://github.com/teamdatatonic/vertex-pipelines-end-to-end-samples"
+    "!git clone -b feat/tutorial_notebook https://github.com/teamdatatonic/vertex-pipelines-end-to-end-samples\n",
+    "# !git clone -b develop https://github.com/teamdatatonic/vertex-pipelines-end-to-end-samples"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "rlBC9B_OuyXJ",
+    "outputId": "00a3fd6f-b06d-461d-8a24-a37d0351e095",
     "tags": []
    },
    "outputs": [],
@@ -204,7 +216,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "r1hZ7k5guyXJ"
+   },
    "source": [
     "Install the packages required for executing this notebook."
    ]
@@ -213,56 +227,139 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "2b4ef9b72d43",
+    "cellView": "form",
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "_5hdfngMuyXJ",
+    "outputId": "1233d17f-8cd2-4185-9b84-3defadc42669"
+   },
+   "outputs": [],
+   "source": [
+    "# @title Prepare notebook.\n",
+    "# @markdown 1. Configure pyenv\n",
+    "!curl https://pyenv.run | bash\n",
+    "\n",
+    "# Add pyenv to PATH\n",
+    "import os\n",
+    "os.environ[\"PATH\"] += \":/root/.pyenv/bin\"\n",
+    "\n",
+    "# Initialize pyenv\n",
+    "!eval \"$(pyenv init -)\"\n",
+    "!eval \"$(pyenv virtualenv-init -)\"\n",
+    "\n",
+    "! pip install poetry\n",
+    "\n",
+    "# @markdown 2. Install the correct Python version\n",
+    "! pyenv install -skip-existing\n",
+    "\n",
+    "# @markdown 3. Configure poetry\n",
+    "! poetry config virtualenvs.prefer-active-python true"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "kKr_J0wY6_Pr"
+   },
+   "source": [
+    "#### Install poetry dependencies for ML pipelines."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "hrev7zxh6GCt",
+    "outputId": "68e48bbd-e646-42f1-d315-2557059807f3"
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "make install"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 1000
+    },
+    "id": "JuYvvx8yuyXK",
+    "outputId": "12f0622d-0362-4cd9-e333-0df6f7cc01a1"
+   },
+   "outputs": [],
+   "source": [
+    "# @title Installing Terraform by downloading a pre-compiled binary.\n",
+    "# @markdown This cell will:\n",
+    "# @markdown 1. **Download** the appropriate package for your system as a zip archive from the Terraform website.\n",
+    "# @markdown 2. **Unzip** the downloaded package.\n",
+    "# @markdown 3. **Ensure Terraform is on your PATH**.\n",
+    "\n",
+    "%%bash\n",
+    "mkdir temp\n",
+    "cd temp\n",
+    "curl -so terraform.zip https://releases.hashicorp.com/terraform/1.5.7/terraform_1.5.7_linux_amd64.zip\n",
+    "unzip terraform.zip > /dev/null && rm -f terraform.zip > /dev/null\n",
+    "mv terraform /usr/local/bin > /dev/null\n",
+    "cd ..\n",
+    "rm -r temp\n",
+    "terraform"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "58707a750154"
+   },
+   "source": [
+    "### Colab only: execute the following cell to restart the kernel."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "f200f10a1da3",
+    "outputId": "6c870257-e089-41a3-ed89-c70b311eb7b0",
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# Install the correct Python version\n",
-    "! pyenv install -skip-existing\n",
+    "# Automatically restart kernel after installs so that your environment can access the new packages\n",
+    "import IPython\n",
     "\n",
-    "# configure poetry \n",
-    "! poetry config virtualenvs.prefer-active-python true\n",
-    "\n",
-    "#Install poetry dependencies for ML pipelines\n",
-    "! make install"
+    "app = IPython.Application.instance()\n",
+    "app.kernel.do_shutdown(True)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "tags": []
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "D31uhP4V9lTc",
+    "outputId": "1ffe618d-962f-4efc-d1b5-dd82c976733b"
    },
+   "outputs": [],
    "source": [
-    "### Terraform"
+    "%cd vertex-pipelines-end-to-end-samples/"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "tags": []
-   },
-   "source": [
-    "**If you do not have terraform installed please follow the instructions below.**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Local JupyterLab instance**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Please follow official documentation for installation instructions: https://developer.hashicorp.com/terraform/downloads"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
+    "id": "Gj8s3i90uyXK",
     "tags": []
    },
    "source": [
@@ -305,7 +402,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
     "id": "oM1iC_MfAts1",
+    "outputId": "8d1edaa5-d9ea-407e-efea-fbdb9691f60f",
     "tags": []
    },
    "outputs": [],
@@ -317,43 +418,56 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "PRCfV5duuyXK"
+   },
    "source": [
     "### Authenticate your Google Cloud account\n",
     "\n",
     "\n",
-    "Depending on your Jupyter environment, you may have to manually authenticate. Follow the relevant instructions below."
+    "Follow the relevant instructions below to authenticate."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "id": "XY-Kz5hmuyXL",
     "tags": []
    },
    "outputs": [],
    "source": [
-    " ! gcloud auth login"
+    "from google.colab import auth\n",
+    "auth.authenticate_user()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "I5nZH6H5uyXL"
+   },
    "source": [
     "### Environment Setup"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "Znu_gBnkuyXL"
+   },
    "source": [
-    "In order to run make commands relevant environment variables need to be set. Please update the environment variables for your dev environment (particularly `VERTEX_PROJECT_ID` and `VERTEX_LOCATION`)."
+    "In order to run make commands relevant environment variables need to be set. Please update the environment variables for your dev environment (particularly `VERTEX_PROJECT_ID`, `VERTEX_LOCATION` and `RESOURCE_SUFFIX`)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "dfN37cNEuyXL",
+    "outputId": "4e20a0a9-6551-428a-ab2e-ac22b530b5f1",
     "tags": []
    },
    "outputs": [],
@@ -380,6 +494,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "EC2VyhYvuyXL",
+    "outputId": "ac399c93-78e2-4bc8-c789-32b49809a789",
     "tags": []
    },
    "outputs": [],
@@ -391,6 +510,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "E1iwILB7uyXN",
+    "outputId": "efef313e-03b5-4b92-b528-3d92084b39b9",
     "tags": []
    },
    "outputs": [],
@@ -412,7 +536,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "IMbeEpCuuyXN"
+   },
    "source": [
     "#### Enable the Cloud Resource Manager and Service Usage APs for your project."
    ]
@@ -421,6 +547,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "id": "Oqu8hNAluyXN",
     "tags": []
    },
    "outputs": [],
@@ -431,7 +558,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "N0W1RMZluyXN"
+   },
    "source": [
     "#### Create tfstate bucket\n",
     "\n",
@@ -451,7 +580,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
     "id": "NIq7R4HZCfIc",
+    "outputId": "c9e11df0-587a-4bb6-92ac-254fc1a78085",
     "tags": []
    },
    "outputs": [],
@@ -471,6 +604,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "330YqgzfuyXN",
     "tags": []
    },
    "source": [
@@ -483,16 +617,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 1000
+    },
+    "id": "-LPegqLYuyXN",
+    "outputId": "ea4a2b99-d729-4f94-a4a0-67ac883246f0",
     "tags": []
    },
    "outputs": [],
    "source": [
-    "! make deploy auto-approve=true"
+    "%%bash\n",
+    "make deploy auto-approve=true"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "ytXz5BkNuyXN",
     "tags": []
    },
    "source": [
@@ -502,6 +644,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "n2BLhXBpuyXN",
     "tags": []
    },
    "source": [
@@ -529,6 +672,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "Fw_DSPaouyXN",
     "tags": []
    },
    "source": [
@@ -537,7 +681,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "iX4_OKX5uyXN"
+   },
    "source": [
     "#### Pre-requisites\n",
     "\n",
@@ -546,7 +692,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "m66vkt7PuyXN"
+   },
    "source": [
     "1. Create a new BigQuery dataset for the Chicago Taxi data:"
    ]
@@ -555,6 +703,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "xBgpwdluuyXN",
+    "outputId": "64044c15-bb91-4b27-973d-1914face2964",
     "tags": []
    },
    "outputs": [],
@@ -564,7 +717,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "AQ88x_8xuyXO"
+   },
    "source": [
     "2. Create a new BigQuery dataset for data processing during the pipelines:"
    ]
@@ -573,6 +728,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "sPWQoXP5uyXO",
+    "outputId": "e968f292-6026-43a3-a9a4-637ffa8e5043",
     "tags": []
    },
    "outputs": [],
@@ -582,7 +742,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "XTCqhzKOuyXO"
+   },
    "source": [
     "3. Set up a BigQuery transfer job to mirror the Chicago Taxi dataset to your project"
    ]
@@ -590,7 +752,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 516
+    },
+    "id": "mr9wTo8-uyXO",
+    "outputId": "1f1aeb1d-869f-41db-8701-b45c1aca81a4"
+   },
    "outputs": [],
    "source": [
     "! pip install google-cloud-bigquery-datatransfer"
@@ -600,6 +769,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 877
+    },
+    "id": "EqI6dBIGuyXO",
+    "outputId": "36281530-93bd-43da-cc1f-e72377651eaa",
     "tags": []
    },
    "outputs": [],
@@ -633,7 +808,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "xRtAwjcHuyXO"
+   },
    "source": [
     "### Building the container images\n",
     "\n",
@@ -644,7 +821,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "hWj89EXmuyXO"
+   },
    "source": [
     "To build the training and serving container images and push them to Artifact Registry run the next cell."
    ]
@@ -653,6 +832,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "id": "Hu-E6Pn3uyXO",
     "tags": []
    },
    "outputs": [],
@@ -663,6 +843,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "CpJhQCwvuyXO",
     "tags": []
    },
    "source": [
@@ -678,7 +859,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "rUnltoeDuyXO"
+   },
    "source": [
     "**Run Training Pipeline**"
    ]
@@ -687,6 +870,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "id": "JwXpPsNPuyXO",
     "tags": []
    },
    "outputs": [],
@@ -697,15 +881,17 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "8a2Rz8tNuyXO",
     "tags": []
    },
    "source": [
-    "After executing the command, a link will appear, leading you to the Vertex AI platform, where you can monitor your pipeline job. Alternatively, you can access it directly through the Google Cloud Console UI by navigating to Vertex AI and then selecting Pipelines."
+    "After executing the command, a link will appear, leading you to the Vertex AI platform, where you can monitor your pipeline job. Alternatively, you can access it through the Google Cloud Console UI under Vertex AI/Pipelines."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "f1yzYZQSuyXO",
     "tags": []
    },
    "source": [
@@ -715,9 +901,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "Cb1kLnZtuyXO"
+   },
    "source": [
-    "**Run Prediction Pipeline** \n",
+    "**Run Prediction Pipeline**\n",
     "\n",
     "After successful training job, you can try prediction pipeline."
    ]
@@ -725,7 +913,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "8gM-UTYzuyXO"
+   },
    "outputs": [],
    "source": [
     "! make run pipeline=prediction build=false"
@@ -734,6 +924,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "GYeHlnV4uyXO",
     "tags": []
    },
    "source": [
@@ -758,7 +949,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "sTCem_rKuyXO"
+   },
    "source": [
     "**Empty the buckets to enable their deletion:**"
    ]
@@ -767,6 +960,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "id": "IW1WVh4_uyXO",
     "tags": []
    },
    "outputs": [],
@@ -779,6 +973,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "3uXsfDFZuyXP",
     "tags": []
    },
    "source": [
@@ -791,6 +986,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "id": "L5jdzMZeuyXP",
     "tags": []
    },
    "outputs": [],
@@ -812,6 +1008,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "69WPFNN-uyXP",
     "tags": []
    },
    "source": [
@@ -822,16 +1019,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "id": "KcQ5cguluyXP",
     "tags": []
    },
    "outputs": [],
    "source": [
-    "! bq --location=${VERTEX_LOCATION} rm -f -r --dataset \"${VERTEX_PROJECT_ID}:chicago_taxi_trips\" "
+    "! bq --location=${VERTEX_LOCATION} rm -f -r --dataset \"${VERTEX_PROJECT_ID}:chicago_taxi_trips\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "gSamp3p9uyXP",
     "tags": []
    },
    "source": [
@@ -842,16 +1041,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "id": "FRKSZmozuyXP",
     "tags": []
    },
    "outputs": [],
    "source": [
-    "! bq --location=${VERTEX_LOCATION} rm -f -r --dataset \"${VERTEX_PROJECT_ID}:preprocessing\" "
+    "! bq --location=${VERTEX_LOCATION} rm -f -r --dataset \"${VERTEX_PROJECT_ID}:preprocessing\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "GhYbRJ0NuyXP",
     "tags": []
    },
    "source": [
@@ -862,6 +1063,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "id": "Msb_7QyLuyXP",
     "tags": []
    },
    "outputs": [],
@@ -873,7 +1075,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "RKDx-NvyuyXO",
+    "tags": []
+   },
    "source": [
     "**Destroy infrastructure by executing undeploy command (terraform destroy):**"
    ]
@@ -881,7 +1086,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "sx_vKniMq9ZX",
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "! make undeploy auto-approve=true"
@@ -890,9 +1098,7 @@
  ],
  "metadata": {
   "colab": {
-   "collapsed_sections": [],
-   "name": "notebook_template.ipynb",
-   "toc_visible": true
+   "provenance": []
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
