--- a/examples/pipelines_colab.ipynb
+++ b/examples/pipelines_colab.ipynb
@@ -184,8 +184,7 @@
    "outputs": [],
    "source": [
     "# Clone a Git repository\n",
-    "!git clone -b feat/tutorial_notebook https://github.com/teamdatatonic/vertex-pipelines-end-to-end-samples\n",
-    "# !git clone -b develop https://github.com/teamdatatonic/vertex-pipelines-end-to-end-samples"
+    "!git clone -b develop https://github.com/teamdatatonic/vertex-pipelines-end-to-end-samples"
    ]
   },
   {
@@ -1101,7 +1100,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1115,11 +1114,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.5"
   },
   "vscode": {
    "interpreter": {
-    "hash": "bb5c7b0035bb37e2e2e56e6840dfdd8f7fa070884ae8e041fbcae450545b1006"
+    "hash": "fd2d2b37aae7c0649f55b7e5d509b0b6c853821eea0be4d0f279f57c5531e1e5"
    }
   }
  },
