feat: Changing project_id

--- a/docs/notebooks/local/01_infrastructure_setup.ipynb
+++ b/docs/notebooks/local/01_infrastructure_setup.ipynb
@@ -250,7 +250,7 @@
    },
    "outputs": [],
    "source": [
-    "PROJECT_ID = \"dt-donatas-sandbox-dev\"  # @param {type:\"string\"}\n",
+    "PROJECT_ID = \"[my-project-id]\"\n",
     "# Set the project id\n",
     "! gcloud config set project {PROJECT_ID}"
    ]
@@ -301,7 +301,7 @@
     "%%writefile .env\n",
     "\n",
     "VERTEX_LOCATION=europe-west2\n",
-    "VERTEX_PROJECT_ID=dt-donatas-sandbox-dev\n",
+    "VERTEX_PROJECT_ID=my-project-id\n",
     "\n",
     "# Suffix (e.g. '<your name>') to facilitate running concurrent pipelines in the same Google Cloud project. Change if working in a team to avoid overwriting resources during development \n",
     "RESOURCE_SUFFIX=default\n",
