--- a/docs/notebooks/local/03_infrastructure_cleanup.ipynb
+++ b/docs/notebooks/local/03_infrastructure_cleanup.ipynb
@@ -164,7 +164,7 @@
    },
    "outputs": [],
    "source": [
-    "PROJECT_ID = \"dt-donatas-sandbox-dev\"  # @param {type:\"string\"}\n",
+    "PROJECT_ID = \"[my-project-id]\"  # @param {type:\"string\"}\n",
     "# Set the project id\n",
     "! gcloud config set project {PROJECT_ID}"
    ]
